syntax = "proto3";

package net.cydhra.acromantula.proto;

message ExportViewCommand {
  int32 file_id = 1;
  string file_path = 2;
  string target_path = 3;
  string type = 4;
  bool recursive = 5;
  bool include_incompatible = 6;
}

message ExportViewResponse {

}