syntax = "proto3";

package net.cydhra.acromantula.proto;

message ViewCommand {
  int32 file_id = 1;
  string file_path = 2;
  string type = 3;
}

message ViewResponse {

}